--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,4 +1,6 @@
-<div class="jumbotron">
+<div id="messages"></div>
+<input id="chat-input" type="text"></input>
+<!-- div class="jumbotron">
   <h2><%= gettext "Welcome to %{name}", name: "Phoenix!" %></h2>
   <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p>
 </div>
@@ -33,4 +35,4 @@
       </li>
     </ul>
   </div>
-</div>
+</div-->
